# geval

./: .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json  turbo.json
.changeset/: breezy-cycles-chew.md  initial-release.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: getting-started.md
examples/: EXAMPLES_SUMMARY.md  README.md  package-lock.json  package.json  run-all-examples.ts  tsconfig.json
geval/: Cargo.toml  README.md
geval/.geval/decisions/: 2026-03-18T18:40:04Z.json  2026-03-18T18:53:33Z.json  2026-03-18T18:53:37Z.json
geval/docs/: architecture.md  auditing.md  customer-demo-feature.md  developer-workflow.md  extending.md  github-actions.md  installation.md  releasing.md  signal-assumptions.md  signals-and-rules.md  versioning.md
geval/examples/: README.md  contract-b.yaml  contract.yaml  policy.yaml  signals.json
geval/scripts/: generate_signals.py
geval/src/: lib.rs  main.rs
geval/src/approval/: approval.rs  mod.rs
geval/src/artifact/: mod.rs  writer.rs
geval/src/cli/: commands.rs  demo_ui.rs  init.rs
geval/src/contract/: combine.rs  loader.rs  mod.rs  model.rs  runner.rs
geval/src/evaluator/: engine.rs  mod.rs
geval/src/explanation/: explain.rs  mod.rs
geval/src/hashing/: mod.rs  sha.rs
geval/src/policy/: mod.rs  model.rs  parser.rs
geval/src/reconciliation/: mod.rs  rules.rs
geval/src/signal_graph/: builder.rs  mod.rs
geval/src/signals/: loader.rs  mod.rs
(+51 files in other folders)
